--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://admin:admin@localhost:27017/service-hub?authSource=admin"
+DATABASE_URL="postgresql://postgres:senai@localhost:5432/service-hub?schema=public"
 
 JWT_SECRET="908c5bcac40d0c27f110eb4a5a0b6e13426dd158"
