--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,29 +1,35 @@
-version: "3.9"
 services:
-  mongo:
-    image: mongo:7
-    container_name: mongo
-    restart: unless-stopped
-    ports:
-      - "27017:27017"
+  postgres:
+    image: postgres:latest
+    container_name: postgres
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin
-      MONGO_REPLICA_SET_NAME: rs0
-    command: >
-      bash -c "
-        mongod --replSet rs0 --bind_ip_all --fork --logpath /var/log/mongodb.log &&
-        sleep 5 &&
-        mongosh --eval \"
-          rs.initiate({
-            _id: 'rs0',
-            members: [{ _id: 0, host: 'localhost:27017' }]
-          })
-        \" &&
-        tail -f /var/log/mongodb.log
-      "
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: iot
+      TZ: America/Sao_Paulo
+    ports:
+      - "5435:5432"
     volumes:
-      - mongo_data:/data/db
+      - pg_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
+  pgadmin:
+    image: dpage/pgadmin4:8
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin123
+      PGADMIN_LISTEN_PORT: "80"
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+      TZ: America/Sao_Paulo
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    ports:
+      - "8082:80"
+    depends_on:
+      - postgres
+    restart: unless-stopped
 
 volumes:
-  mongo_data:
+  pg_data:
+  pgadmin_data:
